tests/semantic_errors/andrei32_6.tl
require "ifj21"

function main()
    if (12 < 6) > (9 < 0) then else end
end

main()
